[package]
name = "hyper-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
hyper = { version = "0.14" }
# Async engine
tokio = { version = "1.17", features = ["signal", "macros"] }
# Fast gzip compression
libdeflater = "0.8"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 64
base64 = "0.13"
