[package]
name = "hyper-utils"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["derive"]

[dependencies]
# Web
hyper = "0.14"
# Async engine
tokio = { version = "1.26", features = ["signal", "macros"] }
# Fast gzip compression
libdeflater = "0.12"
# Fast hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Fast base 64
base64 = "0.21"
# Efficient route matching
matchit = "0.7"
# Future utils lib
futures = "0.3"
# Macro for codegen
duplicate = "1.0"

derive = { path = "derive" }
